# ClientServerForMarket

./: CMakeLists.txt  run.sh
client/: CMakeLists.txt  Client.cpp  main.cpp  user_client.cpp  user_client.h
configs/: Common.hpp  common.h
server/: CMakeLists.txt  Server.cpp  main.cpp  server_client.cpp  server_client.h  trading_exchange_server.cpp  trading_exchange_server.h
server/session/: session.cpp  session.h
server/trading_exchange/: global_trading_exchange_client.h  trading_exchange_client.cpp  trading_exchange_client.h
