CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
PROJECT(ClienServerEcn)

ADD_SUBDIRECTORY(client)

ADD_SUBDIRECTORY(server)

ADD_CUSTOM_TARGET(run_project
    COMMAND bash ${CMAKE_SOURCE_DIR}/run.sh
        ${CMAKE_SOURCE_DIR} $<TARGET_FILE:server>
        ${CMAKE_SOURCE_DIR} $<TARGET_FILE:client>
)

ADD_CUSTOM_TARGET(run_client
    COMMAND bash ${CMAKE_SOURCE_DIR}/run.sh
        ${CMAKE_SOURCE_DIR} $<TARGET_FILE:client>
)

ADD_CUSTOM_TARGET(run_server
    COMMAND bash ${CMAKE_SOURCE_DIR}/run.sh
        ${CMAKE_SOURCE_DIR} $<TARGET_FILE:server>
)