CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

SET(configs ${CMAKE_SOURCE_DIR}/configs)

INCLUDE_DIRECTORIES(${configs})

ADD_EXECUTABLE(client
    main.cpp
    user_client.cpp
)

FIND_PACKAGE(Boost 1.40 COMPONENTS system REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(CMAKE_CXX_STANDARD 17)

TARGET_LINK_LIBRARIES(client PRIVATE Threads::Threads ${Boost_LIBRARIES})